test/runnable/recursive-record.crow.ast.repr
file-ast(
	specs: []
	aliases: []
	structs: [
		struct(
			range(62, 80)
			""
			public
			[]
			none
			record(none, [field(range(72, 79), const, next, suffix(inststruct(range(77, 78), name-range(77, r)), opt))]))]
	funs: [
		fun-decl(
			visibility: public
			sig: sig-ast(
				range(0, 22)
				main
				inststruct(range(5, 12), name-range(5, fut), [inststruct(range(9, 12), name-range(9, nat))])
				[param(range(13, 20), none, suffix(inststruct(range(15, 18), name-range(15, str)), arr))])
			summon: true
			trusted: true
			body: let(
				a
				call(comma, name-range(44, new), [], [call(empty-parens, name-range(44, new), [], [])])
				seq-ast(call(prefix, name-range(49, drop), [], [a]), call(empty-parens, name-range(58, new), [], []))))])
