test/parse-errors/type-param-cant-have-type-args.crow.ast.repr
file-ast(
	specs: []
	aliases: []
	structs: []
	funs: [
		fun-decl(
			public: true
			sig: sig-ast(
				range(0, 16)
				f
				inststruct(range(2, 6), name-range(2, void))
				[param(range(7, 15), some(a), type-param(range(9, 15), a))])
			body: void)])
